add workflow to Readme and Overview

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,8 +2,8 @@
 output: rmarkdown::github_document
 always_allow_html: true
 ---
-
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+[![Analysis-workflow](https://img.shields.io/badge/Analysis-workflow-darkorange)](https://github.com/Illustratien/Scientific_Data_Analyis)
 
 [![Website - pkgdown](https://img.shields.io/badge/data-visulaization-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_overview.html) [![Project-website](https://img.shields.io/badge/Project-website-darkgreen)](https://www.igps.uni-hannover.de/de/forschung/forschungsprojekte/detailansicht/projects/forschungsverbund-briwecs)
 
