--- a/README.Rmd
+++ b/README.Rmd
@@ -2,9 +2,10 @@
 output: rmarkdown::github_document
 always_allow_html: true
 ---
-<!-- README.md is generated from README.Rmd. Please edit that file -->
-[![Analysis-workflow](https://img.shields.io/badge/Analysis-workflow-darkorange)](https://github.com/Illustratien/Scientific_Data_Analyis)
 
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+[![Analysis-workflow](https://img.shields.io/badge/Analysis-workflow-darkorange)](https://github.com/Illustratien/Scientific_Data_Analyis)
 [![Website - pkgdown](https://img.shields.io/badge/data-visulaization-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_overview.html) [![Project-website](https://img.shields.io/badge/Project-website-darkgreen)](https://www.igps.uni-hannover.de/de/forschung/forschungsprojekte/detailansicht/projects/forschungsverbund-briwecs)
 
 ![Breeding Innovations in Wheat for Efficient Cropping Systems (BRIWECS).](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"}
@@ -62,11 +63,11 @@ left_join(unit ,by='trait')%>%
 ```{r,echo=F,fig.width=10, fig.height=10,warning=F}
 dirs <- list.dirs(path = ".", full.names = TRUE, recursive = TRUE) 
 
-r.target <- paste(c(".git",".Rproj.user",".quarto","gfm","docs"),
+r.target <- paste(c(".git",".Rproj.user",".quarto","gfm","docs","figure"),
                   collapse='|')
 dirs <- dirs[!grepl(r.target,dirs)]
 
-e.target <- c("./data","./figure",
+e.target <- c("./data",
               "./metadata","./output","./scripts")
 dirs <- 
   purrr::map(e.target,~{
@@ -81,9 +82,9 @@ x <- lapply(strsplit(dirst, "/"),
   plyr::rbind.fill(.) %>%
   filter(!is.na(V2)) %>% 
   group_by(V1,V2,V3) %>%
-  reframe(V4 = case_when(n() > 5&(!V3%in%c("pre-processing","figure"))~sprintf("%s files",n()-1),
+  reframe(V4 = case_when(n() > 5&(!V3%in%c("pre-processing"))~sprintf("%s files",n()-1),
                            T~V4)) %>% 
-  mutate(V2=factor(V2,levels=c("data","metadata","scripts","output","figure"))) %>% 
+  mutate(V2=factor(V2,levels=c("data","metadata","scripts","output"))) %>% 
   arrange(desc(V2)) %>% suppressWarnings()
 
 x$pathString <- apply(x, 1, function(x) paste(trimws(na.omit(x)), collapse="/"))
@@ -116,11 +117,3 @@ tbl%>%
   kbl(caption = "Table 1. Trait names, sources, ranges and units") %>%
   kable_classic_2(full_width = F, position = "float_right")
 ```
-
-## overview visualizations
-
-![Fig1. Experiments location and soil properties.](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig1.png){fig-align="center"}
-
-![Fig2. An overview of MET data descriptor of winter wheat containing 24 traits collected across six locations in Germany (GGE, HAN, KAL, KIE, QLB, RHH) with nine incomplete managements (HN_WF_RO, LN_NF_IR, HN_NF_IR, HN_WF_IR, HN_WF_RF, LN_WF_IR, HN_NF_RF, LN_NF_RF and LN_WF_RF) during six years (2015-2020).](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/Fig2.png){fig-align="center"}
-
-![Fig3.Scatter plot of 29 combinations of location by year by management (LxYxM) versus 228 genotypes for 24 traits.](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/Fig3.png){fig-align="center"}
