--- a/README.Rmd
+++ b/README.Rmd
@@ -55,7 +55,11 @@ left_join(unit ,by='trait')%>%
 
 1.  open `BRIWECS_Data_Publication.RProject`
 2.  open `scripts/run.R`
-3.  run all `Ctrl + Alt + R` ![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/Instruction.PNG){fig-align="center"}
+3.  run all lines `Ctrl + Alt + R`
+
+![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/Instruction.PNG){fig-align="center"}
+
+***Note: Part of data the traits in Location KAL, PhaseII (2018-2020) is still under data-preparation, will be updated soon***
 
 ## directory tree
 
